--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <footer>
         <p>&copy; 2024 Smart Step Tutoring | All Rights Reserved</p>
-        <img src="https://drive.google.com/uc?id=1l7idJRvoRKpC5hJv5mUUFS-9NTCnvM9O" alt="Tutoring Image">
+        <img src="https://github.com/omarhabli/SmartStep-Tutoring/blob/main/Logo.jpg?raw=true" alt="Tutoring Image">
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
