--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <body>
 
     <header>
-        <img src="https://drive.google.com/uc?id=1l7idJRvoRKpC5hJv5mUUFS-9NTCnvM9O" alt="Smart Step Tutoring Logo">
+        <img src="https://github.com/omarhabli/SmartStep-Tutoring/blob/main/Flyer.jpg?raw=true" alt="Smart Step Tutoring Logo">
         <h1>Welcome to Smart Step Tutoring</h1>
         <p>Your path to academic success!</p>
     </header>
