--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </header>
 
 <div id="main-content" class="container">
-    <h2 id="welcome-message">Welcome, Guest!</h2>
+    <h2 id="welcome-message">Welcome to Your Tutoring Portal!</h2>
     <button class="btn btn-primary" onclick="showSection('math')">Math</button>
     <button class="btn btn-primary" onclick="showSection('reading')">Reading/English</button>
     <button class="btn btn-primary" onclick="showSection('sciences')">Sciences</button>
@@ -67,7 +67,7 @@
 
 <!-- Firebase Configuration -->
 <script>
-    // Firebase Configuration
+    // Firebase configuration
     const firebaseConfig = {
         apiKey: "YOUR_API_KEY",
         authDomain: "YOUR_AUTH_DOMAIN",
